Updates links with affiliate codes

--- a/index.handlebars
+++ b/index.handlebars
@@ -35,12 +35,12 @@
 <div class="info-container">
 	<section class="info" role="main">
 		<div class="aside">
-			<a class="icon" href="http://itunes.apple.com/app/televised-tv-shows-weekly/id581289923?ls=1&mt=8"></a>
+			<a class="icon" href="https://itunes.apple.com/us/app/televised-2-tv-shows-weekly/id581289923?mt=8&uo=6&at=1l3vtDT&ct="></a>
 		</div>
 		<div class="bside">
 			<h1>Televised makes it easy to keep <br>track of your favorite TV shows.</h1>
 			<p>Get a clean overview of your week in TV. Add your favorite TV shows and get airtime*, notifications &amp; episode summaries. Mark episodes as watched and track and share your weekly progress.</p>
-			<a class="appstore" href="http://itunes.apple.com/app/televised-tv-shows-weekly/id581289923?ls=1&mt=8">Get it for FREE</a>
+			<a class="appstore" href="https://itunes.apple.com/us/app/televised-2-tv-shows-weekly/id581289923?mt=8&uo=6&at=1l3vtDT&ct=">Get it for FREE</a>
 			<div class="clearboth"></div>
 		</div>
 		<div class="clearboth"></div>
